@@ -1,4 +1,100 @@
+# These groups only contain permission nodes.
+#
+# **** You can NOT add anything other than permission nodes ****
+#
+# These collections are to be inherited in your different worlds groups.yml's
+# They can also be added as one of a users subgroups, but NOT as a primary group.
+# These collections are available to ALL group and user yml's.
+#
+# Add to and customize these groups to fit yoru needs.
+
 groups:
+
+# Permission nodes for GroupManager
+# by ElgarL, snowleo, continued from gabrielcouto's original
+# http://dev.bukkit.org/server-mods/essentials/
+
+  g:groupmanager_default:
+    permissions:
+    - groupmanager.notify.self
+    
+  g:groupmanager_moderator:
+    permissions:
+    - groupmanager.listgroups
+    - groupmanager.mandemote
+    - groupmanager.manpromote
+    - groupmanager.manselect
+    - groupmanager.manuadd
+    - groupmanager.manudel
+    - groupmanager.manwhois
+    - groupmanager.notify.other
+    
+  g:groupmanager_admin:
+    permissions:
+    - groupmanager.mantogglevalidate
+    - groupmanager.mansave
+    - groupmanager.mangcheckp
+    - groupmanager.manglistp
+    - groupmanager.manucheckp
+    - groupmanager.manulistp
+
+# Permission nodes for CraftBukkit
+# by many devs and contributors
+# http://dl.bukkit.org/
+
+  g:bukkit_default:
+    permissions:
+    - bukkit.broadcast.user
+    - -bukkit.command.plugins
+    
+  g:bukkit_moderator:
+    permissions:
+    - bukkit.command.ban
+    - bukkit.command.ban.ip
+    - bukkit.command.ban.player
+    - bukkit.command.gamemode
+    - bukkit.command.kick
+    - bukkit.command.unban
+    - bukkit.command.unban.ip
+    - bukkit.command.unban.player
+
+  g:bukkit_admin:
+    permissions:
+    - bukkit.broadcast
+    - bukkit.broadcast.admin
+    - bukkit.command.give
+    - bukkit.command.help
+    - bukkit.command.kill
+    - bukkit.command.list
+    - bukkit.command.me
+    - -bukkit.command.op
+    - -bukkit.command.op.give
+    - -bukkit.command.op.take
+    - bukkit.command.plugins
+    - bukkit.command.reload
+    - bukkit.command.save
+    - bukkit.command.save.disable
+    - bukkit.command.save.enable
+    - bukkit.command.save.perform
+    - bukkit.command.say
+    - bukkit.command.stop
+    - bukkit.command.teleport
+    - bukkit.command.tell
+    - bukkit.command.time
+    - bukkit.command.time.add
+    - bukkit.command.time.set
+    - bukkit.command.version
+    - bukkit.command.whitelist
+    - bukkit.command.whitelist.add
+    - bukkit.command.whitelist.disable
+    - bukkit.command.whitelist.enable
+    - bukkit.command.whitelist.list
+    - bukkit.command.whitelist.reload
+    - bukkit.command.whitelist.remove
+
+# Permission nodes for Essentials
+# by ementalo, snowleo, and KHobbits
+# http://dev.bukkit.org/server-mods/essentials/
 
   g:essentials_default:
     permissions:
@@ -8,7 +104,6 @@ groups:
     - essentials.motd
     - essentials.rules
     - essentials.spawn
-    - groupmanager.notify.self
     
   g:essentials_builder:
     permissions:
@@ -101,14 +196,6 @@ groups:
     - essentials.weather
     - essentials.whois
     - essentials.world
-    - groupmanager.listgroups
-    - groupmanager.mandemote
-    - groupmanager.manpromote
-    - groupmanager.manselect
-    - groupmanager.manuadd
-    - groupmanager.manudel
-    - groupmanager.manwhois
-    - groupmanager.notify.other
     
   g:essentials_admin:
     permissions:
@@ -118,62 +205,13 @@ groups:
     - -essentials.reloadall
     - -essentials.plugin
     - essentials.*
-    - groupmanager.mantogglevalidate
-    - groupmanager.mansave
-    - groupmanager.mangcheckp
-    - groupmanager.manglistp
-    - groupmanager.manucheckp
-    - groupmanager.manulistp
-    
-  g:bukkit_default:
-    permissions:
-    - bukkit.broadcast.user
-    - -bukkit.command.plugins
-    
-  g:bukkit_moderator:
-    permissions:
-    - bukkit.command.ban
-    - bukkit.command.ban.ip
-    - bukkit.command.ban.player
-    - bukkit.command.gamemode
-    - bukkit.command.kick
-    - bukkit.command.unban
-    - bukkit.command.unban.ip
-    - bukkit.command.unban.player
 
-  g:bukkit_admin:
+# Permission nodes for Towny by ElgarL
+# http://dev.bukkit.org/server-mods/towny-advanced/
+
+  g:towny_default:
     permissions:
-    - bukkit.broadcast
-    - bukkit.broadcast.admin
-    - bukkit.command.give
-    - bukkit.command.help
-    - bukkit.command.kill
-    - bukkit.command.list
-    - bukkit.command.me
-    - -bukkit.command.op
-    - -bukkit.command.op.give
-    - -bukkit.command.op.take
-    - bukkit.command.plugins
-    - bukkit.command.reload
-    - bukkit.command.save
-    - bukkit.command.save.disable
-    - bukkit.command.save.enable
-    - bukkit.command.save.perform
-    - bukkit.command.say
-    - bukkit.command.stop
-    - bukkit.command.teleport
-    - bukkit.command.tell
-    - bukkit.command.time
-    - bukkit.command.time.add
-    - bukkit.command.time.set
-    - bukkit.command.version
-    - bukkit.command.whitelist
-    - bukkit.command.whitelist.add
-    - bukkit.command.whitelist.disable
-    - bukkit.command.whitelist.enable
-    - bukkit.command.whitelist.list
-    - bukkit.command.whitelist.reload
-    - bukkit.command.whitelist.remove
+    - towny.chat.general
 
   g:towny_builder:
     permissions:
@@ -225,3 +263,23 @@ groups:
     - -towny.wild.destroy.119
     - -towny.wild.destroy.120
     - towny.chat.admin
+    
+# Permission nodes for VanishNoPacket by mbaxter
+# http://dev.bukkit.org/server-mods/vanish/
+
+  g:vanish_moderator:
+    permissions:
+    - -vanish.*
+    - vanish.vanish
+    - vanish.smokin
+    - vanish.nofollow
+    - vanish.nopickup
+    - vanish.preventincomingdamage
+    - vanish.hooks.dynmap.alwayshidden
+    - vanish.hooks.essentials.hide
+
+  g:vanish_admin:
+    permissions:
+    - vanish.silentjoin
+    - vanish.silentquit
+    - vanish.silentchests
